Fixed small glitch on burger menu, a white space was displayed when the browser url bar was hidden on mobile

--- a/bookshelf/src/assets/styles/common/header.css
+++ b/bookshelf/src/assets/styles/common/header.css
@@ -370,7 +370,9 @@ header>nav>ul {
 /* 6.JS styles */
 
 .js-header-expanded {
+    position: absolute;
     height: 100vh;
+    top: 0;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 10vh 5vh 5vh 80vh;
     grid-template-areas: "burger-wrapper logo login" "greeting greeting greeting" "search search search" "navbar navbar navbar";
@@ -403,7 +405,7 @@ header>nav>ul {
 /* This is added to the body when the user expands the burger menu, this css combined with JS disables the scroll on the page */
 
 .js-stop-scrolling {
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
 }
 
